fix projects page alignment

--- a/public/style.css
+++ b/public/style.css
@@ -145,4 +145,13 @@ body {
       }
     }
   }
+
+  #projects {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+
+    max-width: 800px;
+  }
 }
